#DEOPSCSW-672 : Dolly : Use List.of factory method for creating immutable list